fixed spacing on mobile

--- a/chatbot/static/chatbot/css/index.css
+++ b/chatbot/static/chatbot/css/index.css
@@ -63,7 +63,7 @@ a {
     display: inline-block;
     position: relative;
     top: 4px;
-    margin-left: 5px;
+    margin-left: 0;
     margin-bottom: 0;
 }
 
@@ -72,6 +72,7 @@ a {
     color: var(--header-fg-colour);
     border: none;
     font-size: 1.5em;
+    padding-left: 0;
 }
 
 /*
